changed align-items to prevent non painted area at bottom of screen when viewpot gets smaller

--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -2,7 +2,7 @@
 @import '../../styling/animation/animation';
 
 .panel {
-  align-items: baseline;
+  align-items: center;
   background-color: $color-tertiary;
   color: $color-white;
   display: flex;
